[package]
authors = [
	"Limero",
]
edition = "2021"
readme = "README.md"
name = "tiva-rs"
version = "0.1.0"

[features]
# tick-hz-1_000 = ["embassy-time/tick-hz-1_000"]

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = { version = "0.7",features = ["device"] }
cortex-m-semihosting = "0.5"
# panic-halt = "0.2.0"
# panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.4.0" }
embedded-alloc="*"
serde-json-core = "0.5.1"
serde_derive = {version="1.0", default_features = false}
serde = { version = "1.0", default-features = false }
embedded-hal = "0.2.7"
tm4c123x= { version="0.9.2",features=["rt"] }
tm4c123x-hal = { version="0.10.3",features=["rt"] }
# tm4c-hal="0.4.2"
nb-executor = { version= "0.4.2",features=["heapless"] }
bitflags = "2.4.0"
futures = { version = "0.3.21", default-features = false ,features = ["async-await","alloc"] }
heapless = { version = "0.7.16",  features = ["mpmc_large"] }

[dependencies.linked_list_allocator]
default-features = false
version = "0.10.5"
features = ["const_mut_refs"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3