[package]
authors = [
	"Limero",
]
edition = "2021"
readme = "README.md"
name = "tiva-rs"
version = "0.1.0"

[features]
alloc_error_handler = []

[dependencies]
void ={version="1.0.2", default_features = false}
# HAL PAC 
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = { version = "0.7.3",features = ["device"] }
cortex-m-semihosting = "0.5"
panic-semihosting = "0.6.0"
embedded-hal = "0.2.7"
tm4c-hal = { version="0.4.2" }
tm4c123x= { version="0.9.2",features=["rt"] }
tm4c123x-hal = { version="0.10.3",features=["rt"] }
rtt-target = { version = "0.4.0" }
# HEAP 
embedded-alloc="*"
volatile-register="*"
# SERIALIZATION 
serde-json-core = "0.5.1"
serde_derive = {version="1.0", default_features = false}
serde = { version = "1.0", default-features = false }
# ASYNC
futures = { version = "0.3.29", default-features = false, features = ["async-await"] }
embassy-executor = { version = "0.3.0", default-features = false, features = ["arch-cortex-m","executor-thread","nightly","integrated-timers"] }
embassy-sync = { version = "0.4.0" }
embassy-time = { version = "0.1.5", default-features = false, features = ["tick-hz-1_000_000"] }
embassy-futures = { version="*" , default_features=false,features=[]}
# ector= { version = "0.5.0", default-features = false, features = [] }
critical-section = { version = "1.1.2", default-features = false, features = [] }
atomic-polyfill = { version = "1.0.3", default-features = false, features = [] }
# lilos = { version="*", features = ["handoff"] }
# panic-semihosting = "0.6.0"
# thingbuf ={ version = "0.1.4", default-features = false, features = ["alloc"] }
# stakker = { version = "0.2.10", default-features = false, features = ["spin_no_std"] }

[dependencies.linked_list_allocator]
default-features = false
version = "0.10.5"
features = ["const_mut_refs"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "s"